<resources>
    <string name="app_name">pretixPRINT</string>
    <string name="title_activity_main">pretixPRINT</string>
    <string name="title_activity_fileviewer">Print job viewer</string>
    <string name="title_activity_export">Export configuration</string>
    <string name="title_activity_maintenance">Maintenance</string>
    <string name="title_activity_maintenance_type">Maintenance: %s</string>
    <string name="action_label_settings">Settings</string>
    <string name="settings_label_hardware">Hardware</string>
    <string name="settings_label_ticketprinter">Ticket printer</string>
    <string name="settings_label_badgeprinter">Badge printer</string>
    <string name="settings_label_receiptprinter">Receipt printer</string>
    <string name="settings_label_about">About this app</string>
    <string name="settings_label_debugging">Debugging</string>
    <string name="settings_label_last_prints">Last print jobs</string>
    <string name="settings_label_version">Version</string>
    <string name="settings_label_licenses">Author and licenses</string>
    <string name="settings_label_find">Configure printer</string>
    <string name="settings_label_ipaddress">IP address</string>
    <string name="settings_label_port">Port</string>
    <string name="settings_label_printername">Printer name</string>
    <string name="settings_label_driver">Driver</string>
    <string name="settings_label_security">Security</string>
    <string name="settings_label_export_import">Export/Import</string>
    <string name="settings_label_export">Export configuration</string>
    <string name="settings_label_import_scan">Import configuration by scan</string>
    <string name="settings_summary_import_scan">Press hardware scan buttons to import</string>
    <string name="dismiss">Close</string>
    <string name="notification_channel_print">Print jobs</string>
    <string name="notification_channel_print_description">Shows a notification during a print job</string>
    <string name="print_now_notification">Print prepared. Touch to open print dialog</string>
    <string name="print_notification">Printing…</string>
    <string name="err_printer_not_found">Printer %s not found</string>
    <string name="err_no_printer_found">No printer not found</string>
    <string name="err_cups_io">Error while contacting the print server: %s</string>
    <string name="err_files_io">Error while transferring the files to print: %s</string>
    <string name="err_files_generic">Error while creating the files to print: %s</string>
    <string name="err_job_io">Error while sending the print job: %s</string>
    <string name="err_generic">Unknown error while printing: %s</string>
    <string name="welcome_headline">Welcome to pretixPRINT!</string>
    <string name="welcome_tutorial1">pretixPRINT allows other pretix apps, e.g. the ticket selling app pretixPOS, to print tickets, badges, and receipts using suitable printers on your network.</string>
    <string name="welcome_tutorial2">Currently, pretixPRINT knows how to talk to printers supporting IPP or shared with CUPS, i.e. all printers shared by a macOS or Linux computer and most modern printers with a network interface.</string>
    <string name="action_configure">Start finding a printer</string>
    <string name="notification_permission_denied">Notification permission was denied. The app will not be able to print reliably when it is in the background.</string>
    <string name="notification_permission_denied_understood">Understood</string>
    <string name="notification_permission_required">The app is not granted permission to send notifications. This will prevent reliable printing.</string>
    <string name="notification_permission_required_summary">Click here to grant the permission. If no permission dialog shows, you need to grant the permission manually in system settings at Apps → pretixPRINT → Permissions.</string>
    <string name="battery_optimizations_required">Please allow unrestricted background usage for this app.</string>
    <string name="battery_optimizations_required_summary">Printing only works reliably if battery optimizations are turned off for this app. Please click here, then select "All Apps", find pretixPRINT and turn off battery optimizations or restrictions.</string>
    <string name="fullscreen_permission_required">The app is not granted permission to open in full screen. This will prevent printing with the Android System printer.</string>
    <string name="fullscreen_permission_required_summary">Click here to grant the permission. If no permission dialog shows, you need to grant the permission manually in system settings at Apps → pretixPRINT → Permissions.</string>
    <string name="headline_found_network_printers">Found network printers</string>
    <string name="headline_found_usb_devices">Found USB devices</string>
    <string name="headline_found_bluetooth_printers">Found bluetooth printers</string>
    <string name="headline_add_printer">Configure printer</string>
    <string name="field_label_ipaddress">IP address</string>
    <string name="field_helper_ipaddress">Most printers are able to print out their IP address. For Boca printers, press the "Test" button on the side. For Bixolon or Metapace label printers, press the unlabeled button on the back side. For Epson receipt printers, the IP address is printed after power up.</string>
    <string name="field_label_port">Port</string>
    <string name="field_helper_port">Use port 9100 for almost all printers.</string>
    <string name="field_helper_port_cups">Use port 631 for almost all printers.</string>
    <string name="field_label_dpi">DPI</string>
    <string name="field_helper_dpi">The print resolution of your printer, usually between 150 and 300. Can be found in the printer\'s data sheet. A wrong value might lead to printing wrong sizes.</string>
    <string name="field_label_maxwidth">Maximum printing width (in mm)</string>
    <string name="field_label_waitafterpage">Wait time after page (in milliseconds)</string>
    <string name="field_label_eposprintxml_deviceid">Device ID (Default: local_printer)</string>
    <string name="field_label_queue">Printer name</string>
    <string name="resolving">Resolving…</string>
    <string name="testing">Testing…</string>
    <string name="testing_printer">Printing test page on %s…</string>
    <string name="test_success">The connection test was successful.</string>
    <string name="test_success_check">Check the printer output looks correct.</string>
    <string name="test_success_save">Note that your settings have not yet been saved.</string>
    <string name="err_resolv_failed">Resolving the network printer failed.</string>
    <string name="err_field_required">This field is required.</string>
    <string name="err_field_invalid">This field is invalid.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_maintain">Maintenance</string>
    <string name="pref_printer_current">Currently using printer %s @ %s (%s)</string>
    <string name="pref_printer_current_short">Currently using printer %s</string>
    <string name="pref_delete_printer">Delete %s?</string>
    <string name="button_label_test">Print test page</string>
    <string name="bluetooth_printer">Bluetooth Printer</string>
    <string name="network_printer">Network Printer</string>
    <string name="cups">CUPS/IPP</string>
    <string name="system">Android Print Service</string>
    <string name="usb">USB</string>
    <string name="sunmi">Sunmi</string>
    <string name="imin">iMin</string>
    <string name="err_bluetooth_not_available">Bluetooth is not available</string>
    <string name="err_usb_permission_denied">USB permission has been denied</string>
    <string name="err_usb_connection">USB connection failed</string>
    <string name="field_label_macaddress">MAC address</string>
    <string name="field_label_serial">Serial number</string>
    <string name="field_label_usbcompat">Compatibility mode (needed e.g. for Boca printers on HP devices)</string>
    <string name="field_label_graphicescposcompat">Use old image printing mode (no longer supported on modern Epson printers, but maybe required on other printers)</string>
    <string name="err_not_supported">Not supported</string>
    <string name="btn_auto">Auto-detected</string>
    <string-array name="printer_modes"></string-array>
    <string name="settings_label_receiptwidth">Width of receipt paper</string>
    <string name="receiptline_cancellation">*** CANCELLATION ***</string>
    <string name="receiptline_return">*** REVERSED SALE ***</string>
    <string name="receiptline_customerreceipt">C-U-S-T-O-M-E-R---C-O-P-Y</string>
    <string name="receiptline_merchantid">Merchant-ID:</string>
    <string name="receiptline_transactionid">Transaction-ID:</string>
    <string name="receiptline_terminalid">Terminal-ID:</string>
    <string name="receiptline_receiptnumber">Receipt-Nr:</string>
    <string name="receiptline_cardtype">Card Type:</string>
    <string name="receiptline_tracenr">Trace-Nr:</string>
    <string name="receiptline_paymentreceipt">Payment Receipt</string>
    <string name="receiptline_amount">Amount</string>
    <string name="receiptline_cardissuerpaymenttext">I HEREBY AGREE TO PAY THE ABOVE MENTIONED TOTAL ACCORDING TO THE CARD ISSUER TERMS AND CONDITIONS.</string>
    <string name="receiptline_keepreceipt">PLEASE KEEP THIS RECEIPT.</string>
    <string name="receiptline_paidcash">Paid in CASH.</string>
    <string name="receiptline_paidcard">Paid with CARD.</string>
    <string name="receiptline_copy">RECEIPT COPY</string>
    <string name="receiptline_customerinformation">Customer Information:</string>
    <string name="pref_printer_cpl">%s characters</string>
    <string name="setup_connection_type_headline">How is your printer connected?</string>
    <string name="connection_type_network">Network (LAN/WLAN)</string>
    <string name="connection_type_bluetooth">Bluetooth</string>
    <string name="connection_type_usb">USB (experimental, works on some devices)</string>
    <string name="connection_type_cups">CUPS (Linux server)</string>
    <string name="connection_type_system">Android Print Service</string>
    <string name="connection_type_sunmi">Built-in printer (Sunmi)</string>
    <string name="connection_type_imin">Built-in printer (iMin)</string>
    <string name="error_no_choice">Please choose an option</string>
    <string name="btn_next">NEXT</string>
    <string name="setup_network_settings">Where is your printer on the network?</string>
    <string name="btn_prev">PREVIOUS</string>
    <string name="protocol_fgl">FGL ticket printer (e.g. Boca, Practical Automation, …)</string>
    <string name="protocol_slcs">SLCS label printer (e.g. Bixolon, Metapace, …)</string>
    <string name="protocol_brother">Brother label printer (QL series)</string>
    <string name="protocol_escpos">ESC/POS receipt printer (e.g. Epson, Bixolon, …)</string>
    <string name="protocol_png">Image printing</string>
    <string name="protocol_evolisdirect">Evolis card printer (Primacy and Zenius series)</string>
    <string name="protocol_linkoscard">Zebra card printer (ZMotif and ZXP protocol card printers; e.g. ZC- and ZXP-series)</string>
    <string name="protocol_linkos">Zebra thermal printer (CPCL and ZPL protocol)</string>
    <string name="protocol_eposprintxml">ePOS-Print XML/TM-Intelligent receipt printer (Epson TM-Txx-i, TM-Txx-iHub)</string>
    <string name="protocol_starprnt">StarPRNT receipt printer (mC-Print2/3, mPOP, SM-L/-S Series, TSP100IV, …)</string>
    <string name="setup_protocol_settings">We need a few more parameters, then we\'re good to go:</string>
    <string name="setup_done">Okay, we\'ve got everything!</string>
    <string name="btn_save">Save settings</string>
    <string name="field_label_rotation">Rotation</string>
</resources>