<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <PreferenceCategory android:title="@string/settings_label_ticketprinter">
        <Preference
            android:key="hardware_ticketprinter_find"
            android:title="@string/settings_label_find"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_label_badgeprinter">
        <Preference
            android:key="hardware_badgeprinter_find"
            android:title="@string/settings_label_find"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_label_about">
        <Preference
            android:key="licenses"
            android:title="@string/settings_label_licenses"
            />
        <Preference
            android:key="version"
            android:title="@string/settings_label_version"
            android:summary="loading…"
            />
    </PreferenceCategory>
</PreferenceScreen>